@@ -17,6 +17,10 @@
 2.進入後台進行模組安裝即可。
 
 【歷史更新】
+jill_query 2.5 版 2022-03-22 釋出
+ =================================================
+1.新增綁內建會員Email當作搜尋欄位查詢
+2.管理者可使用查詢關鍵字來修改匯入的EXCEL檔
 jill_query 2.44 版 2022-01-11 釋出
  =================================================
 1.修正已關閉的查詢仍能查詢
